Fixed PlanService and added unit tests